--- a/index.html
+++ b/index.html
@@ -142,41 +142,8 @@
     </main>
 
     <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
-  <!-- Section: Social media -->
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-    <!-- Left -->
-    <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
-    </div>
-    <!-- Left -->
-
-    <!-- Right -->
-    <div>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-    <!-- Right -->
-  </section>
-  <!-- Section: Social media -->
-
-  <!-- Section: Links  -->
+<footer class="text-center text-lg-start text-muted">
+  <!-- Seccion: Links  -->
   <section class="">
     <div class="container text-center text-md-start mt-5">
       <!-- Grid row -->
@@ -184,106 +151,36 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
-          </h6>
-          <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
-          </p>
+          <h6 class="text-uppercase fw-bold mb-3 translate"><i class="fas fa-gem"></i>Refugio Lunar</h6>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime iusto ex blanditiis magni illum odit aperiam quis recusandae est inventore, atque, odio laudantium minima tempore.</p>
         </div>
-        <!-- Grid column -->
-
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Products
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Angular</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">React</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Vue</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Laravel</a>
-          </p>
+          <h6 class="text-uppercase fw-bold mb-4 translate ">Terapias</h6>
+          <p><a href="./pages/terapias.html" class="text-reset">Alineación de chakras</a></p>
+          <p><a href="./pages/terapias.html" class="text-reset">Carta astral</a></p>
+          <p><a href="./pages/terapias.html" class="text-reset">Constelación familiar</a></p>
+          <p><a href="./pages/terapias.html" class="text-reset">Tarot</a></p>
+          <p><a href="./pages/terapias.html" class="text-reset">Registros akashicos</a></p>
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Pricing</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Settings</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Orders</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Help</a>
-          </p>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
+        
+       <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
-          <p>
-            <i class="fas fa-envelope me-3"></i>
-            info@example.com
-          </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+          <h6 class="text-uppercase fw-bold mb-4 translate">Contacto</h6>
+          <p><i class="fas fa-home me-3"></i> Gabriel Fuenzalida #10400, San Bernardo</p>
+          <p><i class="fas fa-envelope me-3"></i>refugiolunar@gmail.com</p>
+          <p><i class="fas fa-phone me-3"></i> +569 4455 6677</p>
         </div>
-        <!-- Grid column -->
       </div>
-      <!-- Grid row -->
     </div>
   </section>
-  <!-- Section: Links  -->
-
   <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
+   Todos los derechos reservados por: <a class="text-reset fw-bold" href="index.html">refugiolunar.com</a>
   </div>
-  <!-- Copyright -->
 </footer>
-<!-- Footer -->
-    <!-- <footer>
-      <img class="logo rotate-vert-center" src="./images/logo.png" />
-      <div>
-        <h3>Contacto</h3>
-        <li>Instagram</li>
-        <li>Facebook</li>
-        <li>Correo</li>
-      </div>
-      <div>
-        <h3>Terapias</h3>
-        <li>Alineación de chakras</li>
-        <li>Carta Astral</li>
-        <li>Constelaciones Familiares</li>
-        <li>Tarot</li>
-      </div>      
-      <p class="derechos">
-        @CopyRight - Todos los derechos reservados a Refugio Lunar
-      </p>
-    </footer> -->
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
