--- a/pages/terapias.html
+++ b/pages/terapias.html
@@ -74,7 +74,7 @@
        <div class="grid2__img1"><img src="../images/cfamiliar1.jpg" alt=""></div>
        <div class="grid2__img2"><img src="../images/cfamiliar2.jpg" alt=""></div>
        <div class="grid2__titulo">
-         <h2 class="titulo-terapia">Carta astral</h2>
+         <h2 class="titulo-terapia">Constelaciones familiares</h2>
        </div>
        <div class="grid2__parrafo">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure voluptatibus qui quae non     aperiam ipsum laborum explicabo laudantium, minus, consequatur libero magnam exercitationem. Odio harum ab dolor quis expedita pariatur.
@@ -87,7 +87,7 @@
       <div class="grid1__img1"><img src="../images/chakras1.jpg" alt=""></div>
       <div class="grid1__img2"><img src="../images/chakras2.jpg" alt=""></div>
       <div class="grid1__titulo">
-        <h2 class="titulo-terapia">Carta astral</h2>
+        <h2 class="titulo-terapia">Alineación de Chakras</h2>
       </div>
       <div class="grid1__parrafo">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure voluptatibus qui quae non aperiam ipsum laborum explicabo laudantium, minus, consequatur libero magnam exercitationem. Odio harum ab dolor quis expedita pariatur.
@@ -97,10 +97,10 @@
       </div> 
    </section>
    <section class="grid2">
-     <div class="grid2__img1"><img src="../images/castral1.jpg" alt=""></div>
+     <div class="grid2__img1"><img src="../images/" alt=""></div>
      <div class="grid2__img2"><img src="../images/castral2.jpg" alt=""></div>
      <div class="grid2__titulo">
-       <h2 class="titulo-terapia">Carta astral</h2>
+       <h2 class="titulo-terapia">Tarot</h2>
      </div>
      <div class="grid2__parrafo">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure voluptatibus qui quae non     aperiam ipsum laborum explicabo laudantium, minus, consequatur libero magnam exercitationem. Odio harum ab dolor quis expedita pariatur.
@@ -110,24 +110,45 @@
     </div>    
    </section>
     </main>
-    <footer>
-      <img class="logo rotate-vert-center" src="../images/logo.png" />
-      <div>
-        <h3>Contacto</h3>
-        <li>Instagram</li>
-        <li>Facebook</li>
-        <li>Correo</li>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-muted">
+      <!-- Seccion: Links  -->
+      <section class="">
+        <div class="container text-center text-md-start mt-5">
+          <!-- Grid row -->
+          <div class="row mt-3">
+            <!-- Grid column -->
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+              <!-- Content -->
+              <h6 class="text-uppercase fw-bold mb-3 translate"><i class="fas fa-gem"></i>Refugio Lunar</h6>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime iusto ex blanditiis magni illum odit aperiam quis recusandae est inventore, atque, odio laudantium minima tempore.</p>
+            </div>
+            <!-- Grid column -->
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+              <!-- Links -->
+              <h6 class="text-uppercase fw-bold mb-4 translate ">Terapias</h6>
+              <p><a href="terapias.html" class="text-reset">Alineación de chakras</a></p>
+              <p><a href="terapias.html" class="text-reset">Carta astral</a></p>
+              <p><a href="terapias.html" class="text-reset">Constelación familiar</a></p>
+              <p><a href="terapias.html" class="text-reset">Tarot</a></p>
+              <p><a href="terapias.html" class="text-reset">Registros akashicos</a></p>
+            </div>
+            
+           <!-- Grid column -->
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+              <!-- Links -->
+              <h6 class="text-uppercase fw-bold mb-4 translate">Contacto</h6>
+              <p><i class="fas fa-home me-3"></i> Gabriel Fuenzalida #10400, San Bernardo</p>
+              <p><i class="fas fa-envelope me-3"></i>refugiolunar@gmail.com</p>
+              <p><i class="fas fa-phone me-3"></i> +569 4455 6677</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Copyright -->
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
+       Todos los derechos reservados por: <a class="text-reset fw-bold" href="index.html">refugiolunar.com</a>
       </div>
-      <div>
-        <h3>Terapias</h3>
-        <li>Alineación de chakras</li>
-        <li>Carta Astral</li>
-        <li>Constelaciones Familiares</li>
-        <li>Tarot</li>
-      </div>      
-      <p class="derechos">
-        @CopyRight - Todos los derechos reservados a Refugio Lunar
-      </p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
