Añadiendo contenido a html de Agenda

--- a/index.html
+++ b/index.html
@@ -56,16 +56,7 @@
          </div>
       </div>
     </nav>
-    <!-- <nav>
-      <img class="logo rotate-vert-center" src="./images/logo.png" />
-      <ul class="menu">
-        <li class="translate"><a class="inicio" href="index.html">INICIO</a></li>
-        <li class="translate"><a class="links" href="./pages/quiensoy.html">SOBRE MÍ</a></li>
-        <li class="translate"><a class="links" href="./pages/terapias.html">TERAPIAS</a></li>
-        <li class="translate"><a class="links" href="./pages/agenda.html">AGENDA</a></li>
-        <li class="translate"><a class="links" href="./pages/contacto.html">CONTACTO</a></li>
-      </ul>
-    </nav> -->
+<!-- Main -->
     <main>
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
