--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -1,3 +1,4 @@
+<!-- Header -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,7 +13,8 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg sticky-top navegacion">
+<!-- Barra de navegación -->
+      <nav class="navbar navbar-expand-lg sticky-top navegacion">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"> ❧ Refugio Lunar ☙ </a>
         <button
@@ -55,6 +57,200 @@
          </div>
       </div>
     </nav>
+
+<div class="grid3">
+  <div class="tituloagenda">
+    <h1>Agenda tu cita</h1>
+  </div>
+  <div class="mes1">
+    <div class="month">      
+      <h2 class="mes-titulo">Marzo 2023</h2>    
+    <ol class="mesx">
+      <li class="dia">LUN</li>
+      <li class="dia">MAR</li>
+      <li class="dia">MIE</li>
+      <li class="dia">JUE</li>
+      <li class="dia">VIE</li>
+      <li class="dia">SAB</li>
+      <li class="dia">DOM</li>
+      <li class="primerdia-3">1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+      <li>13</li>
+      <li>14</li>
+      <li>15</li>
+      <li>16</li>
+      <li>17</li>
+      <li>18</li>
+      <li>19</li>
+      <li>20</li>
+      <li>21</li>
+      <li>22</li>
+      <li>23</li>
+      <li>24</li>
+      <li>25</li>
+      <li>26</li>
+      <li>27</li>
+      <li>28</li>
+      <li>29</li>
+      <li>30</li>
+      <li>31</li>
+  </ol>
+  </div>
+  </div>
+  
+  <div class="mes2">
+    <div class="month">      
+      <h2 class="mes-titulo">Abril 2023</h2>    
+    <ol class="mesx">
+      <li class="dia">LUN</li>
+      <li class="dia">MAR</li>
+      <li class="dia">MIE</li>
+      <li class="dia">JUE</li>
+      <li class="dia">VIE</li>
+      <li class="dia">SAB</li>
+      <li class="dia">DOM</li>
+      <li class="primerdia-4">1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+      <li>13</li>
+      <li>14</li>
+      <li>15</li>
+      <li>16</li>
+      <li>17</li>
+      <li>18</li>
+      <li>19</li>
+      <li>20</li>
+      <li>21</li>
+      <li>22</li>
+      <li>23</li>
+      <li>24</li>
+      <li>25</li>
+      <li>26</li>
+      <li>27</li>
+      <li>28</li>
+      <li>29</li>
+      <li>30</li>
+      <li>31</li>
+  </ol>
+  </div>
+  </div>
+  <div class="mes3">
+    <div class="month">      
+      <h2 class="mes-titulo">Mayo 2023</h2>    
+    <ol class="mesx">
+      <li class="dia">LUN</li>
+      <li class="dia">MAR</li>
+      <li class="dia">MIE</li>
+      <li class="dia">JUE</li>
+      <li class="dia">VIE</li>
+      <li class="dia">SAB</li>
+      <li class="dia">DOM</li>
+      <li class="primerdia-5">1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+      <li>13</li>
+      <li>14</li>
+      <li>15</li>
+      <li>16</li>
+      <li>17</li>
+      <li>18</li>
+      <li>19</li>
+      <li>20</li>
+      <li>21</li>
+      <li>22</li>
+      <li>23</li>
+      <li>24</li>
+      <li>25</li>
+      <li>26</li>
+      <li>27</li>
+      <li>28</li>
+      <li>29</li>
+      <li>30</li>
+      <li>31</li>
+  </ol>
+  </div>
+  </div>
+  <div class="mes4">
+    <div class="month">      
+      <h2 class="mes-titulo">Junio 2023</h2>    
+    <ol class="mesx">
+      <li class="dia">LUN</li>
+      <li class="dia">MAR</li>
+      <li class="dia">MIE</li>
+      <li class="dia">JUE</li>
+      <li class="dia">VIE</li>
+      <li class="dia">SAB</li>
+      <li class="dia">DOM</li>
+      <li class="primerdia-6">1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+      <li>13</li>
+      <li>14</li>
+      <li>15</li>
+      <li>16</li>
+      <li>17</li>
+      <li>18</li>
+      <li>19</li>
+      <li>20</li>
+      <li>21</li>
+      <li>22</li>
+      <li>23</li>
+      <li>24</li>
+      <li>25</li>
+      <li>26</li>
+      <li>27</li>
+      <li>28</li>
+      <li>29</li>
+      <li>30</li>
+      <li>31</li>
+  </ol>
+  </div>
+  </div>
+  <div class="form">
+    <h2>Ingresa tus datos para agendar</h2>
+  </div>
+</div>
+
+
+
+
 
 <!-- Footer -->
 <footer class="text-center text-lg-start text-muted">
