--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,3 +1,4 @@
+<!-- Header -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,6 +13,7 @@
   </head>
 
   <body>
+<!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg sticky-top navegacion">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"> ❧ Refugio Lunar ☙ </a>
