Incorporando SAAS al nav y footer

--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -16,7 +16,7 @@
  <!-- Barra de navegación --> 
     <nav class="navbar navbar-expand-lg sticky-top navegacion">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"> ❧ Refugio Lunar ☙ </a>
+        <a class="navbar-brand" href="../index.html"> ✦ Refugio Lunar </a>
         <button
           class="navbar-toggler"
           type="button"
