--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
 <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg sticky-top navegacion">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">✦ Refugio Lunar  </a>
+        <a class="navbar-brand refugiolunar" href="./index.html">✦ Refugio Lunar  </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -28,24 +28,29 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul class="navbar-nav menu me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px ">
-            <li class="nav-item translate"><a class="nav-link inicio" aria-current="page" href="index.html">Inicio</a></li>
-            <li class="nav-item translate"><a class="nav-link links" href="./pages/quiensoy.html">Sobre mí</a></li>
-            <li class="nav-item translate dropdown"><a class="nav-link dropdown-toggle links" href="./pages/terapias.html" role="button"     data-bs-toggle="dropdown" aria-expanded="false">Terapias</a>
+            <li class="nav-item translate">
+              <a class="nav-link inicio" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item translate">
+              <a class="nav-link links" href="./pages/quiensoy.html">Sobre mí</a>
+            </li>
+            <li class="nav-item translate dropdown">
+              <a class="nav-link dropdown-toggle links" href="./pages/terapias.html" role="button"     data-bs-toggle="dropdown" aria-expanded="false">Terapias</a>
               <ul class="dropdown-menu">
                 <li class="translate">
-                  <a class="dropdown-item" href="./pages/terapias.html">Alineación de chakras</a>
+                  <a class="dropdown-item translate" href="./pages/terapias.html">Alineación de chakras</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./pages/terapias.html">Carta astral</a>
+                  <a class="dropdown-item translate" href="./pages/terapias.html">Carta astral</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./pages/terapias.html">Constelación familiar</a>
+                  <a class="dropdown-item translate" href="./pages/terapias.html">Constelación familiar</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./pages/terapias.html">Tarot</a>
+                  <a class="dropdown-item translate" href="./pages/terapias.html">Tarot</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./pages/terapias.html">Registros akashicos</a>
+                  <a class="dropdown-item translate" href="./pages/terapias.html">Registros akashicos</a>
                 </li>
               </ul>
             </li>
@@ -65,7 +70,7 @@
               <img src="./images/fondo1.jpeg" class="d-block w-100">
           <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
             <h1 class="subtitulo translate">Refugio Lunar</h1>
-            <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, provident facilis rerum, sed, est delectus nulla doloremque fugit non iste quisquam fugiat adipisci hic ex? Officia nesciunt neque deserunt repellendus?</p>
+            <p class="descripcion">Es un espacio que busca brindar ayuda, comprensión y solución a los problemas, inquietudes de las personas a través de las terapias holisticas</p>
           </div>
           </div>
 
@@ -73,8 +78,10 @@
             <img src="./images/fondo2.jpeg" class="d-block w-100">
             <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
               <h1 class="display-1 text-capitalize subtitulo translate">Terapias</h1>
-              <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, provident facilis rerum, sed, est delectus nulla doloremque fugit non iste quisquam fugiat adipisci hic ex? Officia nesciunt neque deserunt repellendus?</p>
-              <button type="button" class="boton btn btn-light ">Ir</button>
+              <p class="descripcion">Gracias a la formación constante de nuestra fundadora, es que ponemos a disposición distintas terapias, las cuales te invito a conocer a continuación...</p>
+              <form action="./pages/terapias.html">
+              <button type="submit" class="boton btn btn-light">Terapias</button>
+              </form>
             </div>
           </div>
 
@@ -82,8 +89,10 @@
             <img src="./images/fondo3.jpeg" class="d-block w-100">
             <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
               <h1 class="display-1 text-capitalize subtitulo translate">Contacto</h1>
-              <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, provident facilis rerum, sed, est delectus nulla doloremque fugit non iste quisquam fugiat adipisci hic ex? Officia nesciunt neque deserunt repellendus?</p>
-              <button type="button" class="boton btn btn-light">Ir</button>
+              <p class="descripcion">¿Tienes dudas? - ¿Necesitas agendar? Te invitamos a resolver tus dudas, solicitudes, etc, presionado el siguiente botón:</p>
+              <form action="./pages/contacto.html">
+                <button type="submit" class="boton btn btn-light">Contacto</button>
+              </form>
             </div>
           </div>
 
@@ -103,7 +112,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-3">
           <div class="col">
             <div class="card">
-              <img src="./images/tarot.jpeg" class="card-img-top">
+              <img src="./images/tarot1.jpg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Tarot</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -143,7 +152,7 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-3 translate"><i class="fas fa-gem"></i>Refugio Lunar</h6>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime iusto ex blanditiis magni illum odit aperiam quis recusandae est inventore, atque, odio laudantium minima tempore.</p>
+          <p>Te invitamos a visitar nuestras redes sociales y compartir con tus amigos, familia y/o conocidos.</p>
         </div>
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
