--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -16,7 +16,7 @@
 <!-- Barra de navegación -->
       <nav class="navbar navbar-expand-lg sticky-top navegacion">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"> ❧ Refugio Lunar ☙ </a>
+        <a class="navbar-brand" href="../index.html"> ✦ Refugio Lunar </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -63,6 +63,7 @@
     <h1>Agenda tu cita</h1>
   </div>
   <div class="mes1">
+
     <div class="month">      
       <h2 class="mes-titulo">Marzo 2023</h2>    
     <ol class="mesx">
