--- a/pages/terapias.html
+++ b/pages/terapias.html
@@ -16,7 +16,7 @@
  <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg sticky-top navegacion">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"> ❧ Refugio Lunar ☙ </a>
+        <a class="navbar-brand" href="../index.html"> ✦ Refugio Lunar </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,16 +36,16 @@
                 <li class="translate">
                   <a class="dropdown-item" href="terapias.html">Alineación de chakras</a>
                 </li>
-                <li>
+                <li class="translate">
                   <a class="dropdown-item" href="terapias.html">Carta astral</a>
                 </li>
-                <li>
+                <li class="translate">
                   <a class="dropdown-item" href="terapias.html">Constelación familiar</a>
-                </li>
-                <li>
+                </li >
+                <li class="translate">
                   <a class="dropdown-item" href="terapias.html">Tarot</a>
                 </li>
-                <li>
+                <li class="translate">
                   <a class="dropdown-item" href="terapias.html">Registros akashicos</a>
                 </li>
               </ul>
