Incorporando SAAS a los archivos keyframes/agenda/terapias/index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Pagina de inicio que muestra un breve resumen del contenido de los demás archivos html">
     <title>regufiolunar.cl | Un lugar para sanar</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
@@ -63,10 +64,10 @@
     </nav>
 <!-- Main -->
     <main>
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleAutoplaying" class="carousel slide carrusel" data-bs-ride="carousel">
         <div class="carousel-inner">
 
-          <div class="carousel-item active d-item">
+          <div class="carousel-item active">
               <img src="./images/fondo1.jpeg" class="d-block w-100">
           <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
             <h1 class="subtitulo translate">Refugio Lunar</h1>
@@ -114,8 +115,8 @@
             <div class="card">
               <img src="./images/tarot1.jpg" class="card-img-top">
               <div class="card-body">
-                <h5 class="card-title">Tarot</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card__title">Tarot</h5>
+                <p class="card__text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
           </div>
@@ -123,8 +124,8 @@
             <div class="card">
               <img src="./images/alineaciondechakras.jpeg" class="card-img-top">
               <div class="card-body">
-                <h5 class="card-title">Alineacion de Chakras</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card__title">Alineacion de Chakras</h5>
+                <p class="card__text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
           </div>
@@ -132,8 +133,8 @@
             <div class="card">
               <img src="./images/Carta-Astral.jpeg" class="card-img-top">
               <div class="card-body">
-                <h5 class="card-title">Carta astral</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card__title">Carta astral</h5>
+                <p class="card__text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
           </div>
