--- a/pages/terapias.html
+++ b/pages/terapias.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>regufiolunar.cl | Un lugar para sanar</title>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
 
   <body>
@@ -61,8 +61,8 @@
     <main>
       <h1>Terapias</h1>
       <section class="grid1">
-        <div class="grid1__img1"><img src="../images/castral1.jpg" alt=""></div>
-        <div class="grid1__img2"><img src="../images/castral2.jpg" alt=""></div>
+        <div class="grid1__img1"><img src="../images/castral1.jpg" alt="imagen de una carta astral"></div>
+        <div class="grid1__img2"><img src="../images/castral2.jpg" alt="imagen de una carta astral"></div>
         <div class="grid1__titulo">
           <h2 class="titulo-terapia">Carta astral</h2>
         </div>
