Saas aplicado para las paginas restantes

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </div>
   </section>
   <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
+  <div class="text-center p-4 footer_der">
    Todos los derechos reservados por: <a class="text-reset fw-bold" href="index.html">refugiolunar.com</a>
   </div>
 </footer>
