--- a/pages/terapias.html
+++ b/pages/terapias.html
@@ -142,7 +142,7 @@
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Content -->
               <h6 class="text-uppercase fw-bold mb-3 translate"><i class="fas fa-gem"></i>Refugio Lunar</h6>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime iusto ex blanditiis magni illum odit aperiam quis recusandae est inventore, atque, odio laudantium minima tempore.</p>
+              <p>Te invitamos a visitar nuestras redes sociales y compartir con tus amigos, familia y/o conocidos.</p>
             </div>
             <!-- Grid column -->
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -167,9 +167,9 @@
         </div>
       </section>
       <!-- Copyright -->
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
-       Todos los derechos reservados por: <a class="text-reset fw-bold" href="index.html">refugiolunar.com</a>
-      </div>
+      <div class="text-center p-4 footer_der">
+        Todos los derechos reservados por: <a class="text-reset fw-bold" href="index.html">refugiolunar.com</a>
+       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
